# SmartSubstation

./: 500kvlonglinetest.bakx  500kvlonglinetest.pscx  500kvlonglinetest.psmx  CMakeLists.txt  README.md
500kvlonglinetest.gf46/: 500kvlonglinetest.30065.bat  500kvlonglinetest.mak  500kvlonglinetest.mak.bat  500kvlonglinetest.map  Main.dta  Main.f  Tline_1a.tli  Tline_1b.tli  Tline_1b.tlo  Tline_2a.out  Tline_2a.tli  Tline_2b.tli
code/: CTBreakRelay.c  PTbreakRelay.c  TestUnit.c  breakerRelay.c  bus.c  busAntiSaturation.c  busAntiSaturation_500kV.c  busBlockLogic.c  busBranchFailureRelay.c  busBrkFailureJudgeAux_500kV.c  busBrkFailureRelay.c  busBrkFailureRelay_500kV.c  busDeadZoneRelay.c  busDiffBackup.c  busDiffRelay.c  busDiffRelay_500kV.c  busModeRecognize.c  busOpenPhaseRelay.c  busOverCurrentRelay.c  busPTBreakRelay.c  busStarter.c  busStarter_500kV.c  busTripGenerate.c  bus_500kV.c  common.c  common.h  currentDiffRelay.c  dataStruct.h  deltaDistanceRelay.c  distanceRelay.c  line.c  lineStarter.c  lineTripGenerate.c  loadLimitRelay.c  overCurrentRelay.c  relayMain.c  tripController.c  versionInfo.txt  zeroSeqCurrentRelay.c
code/mea/: meaRecord.c  meaSample.c  meaTelecontrol.c  meaTelemetry.c
code/tran/: deltaDiff.c  imp.c  lonDiff.c  lowSideDiff.c  overCur.c  splitDiff.c  tran.c  tranStarter.c  zeroDiff.c
config/: line1M.conf  mea_500kV_1.conf
log/2020-09-12_17-35/: log.txt  mea_500kV_1-PrimarySide-record.txt  mea_500kV_1-SecondarySide-record.txt  mea_500kV_1-SynchronousInfo-record.txt
log/2020-09-12_19-30/: log.txt
log/2020-09-12_19-39/: log.txt
log/2020-09-12_19-49/: log.txt
(+118 files in other folders)
